--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,6 +1,4 @@
-= render 'header'
-%div.jumbotron
+.jumbotron
   %h1.page-header Hello there!
   %h2 Use Prilepin's Strength to generate, track and share your strength journey!
-  = link_to "Sign Up", sign_up_path, class: "btn btn-primary btn-lg"
-= render 'footer'
+  = link_to "Sign Up", create_path, class: "btn btn-primary btn-lg"
