--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,13 @@
 %html
 %head
   %title Prilepin's Strength
-  = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true 
-  = javascript_include_tag 'application', 'data-turbolinks-track' => true 
-  = csrf_meta_tags 
+  = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+  = javascript_include_tag 'application', 'data-turbolinks-track' => true
+  = csrf_meta_tags
 %body
-= yield 
+  = render 'layouts/header'
+  .container
+    - flash.each do |key, value|
+      .alert.alert-=key=value
+    = yield
+  = render 'layouts/footer'
