--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,4 +10,5 @@
     - flash.each do |key, value|
       .alert.alert-=key=value
     = yield
+    = debug params if Rails.env.development?
   = render 'layouts/footer'
