added rspec tests for static_pages

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,4 +4,4 @@
     %nav
       %ul.pull-right.list-inline.navbar-text
         %li= link_to "About", about_path
-        %li= link_to "Sign In", new_session_path
+        %li= link_to "Sign In", signin_path
