--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 %html
 %head
-  %title Prilepin's Strength
+  %title= yield :title
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
@@ -8,7 +8,7 @@
   = render 'layouts/header'
   .container
     - flash.each do |key, value|
-      .alert.alert-=key=value
+      .alert.alert-error =key =value
     = yield
     = debug params if Rails.env.development?
   = render 'layouts/footer'
