--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,3 +1,4 @@
+- provide :title , 'Home'
 .jumbotron
   %h1.page-header Hello there!
   %h2 Use Prilepin's Strength to generate, track and share your strength journey!
