--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -2,4 +2,4 @@
 .jumbotron
   %h1.page-header Hello there!
   %h2 Use Prilepin's Strength to generate, track and share your strength journey!
-  = link_to "Sign Up", new_user_path, class: "btn btn-primary btn-lg"
+  = link_to "Sign Up", signup_path, class: "btn btn-primary btn-lg"
