--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
   = render 'layouts/header'
   .container
     - flash.each do |key, value|
-      .alert.alert-error =key =value
+      =content_tag :div, value, class: "alert alert-#{key}"
     = yield
     = debug params if Rails.env.development?
   = render 'layouts/footer'
