--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,10 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    %p.notice= notice
-    %p.alert= alert
-    = debug(params) if Rails.env.development? 
-    = yield
+    =render 'refills/centered_navigation'
+    .container
+      %p.notice= notice
+      %p.alert= alert
+      = yield
+    =render 'refills/footer_2'
+  = debug(params) if Rails.env.development?
