--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,4 +1,1 @@
-%h1 Home Page
-.jumbotron
-  %p Hello there! Welcome to Prilepin's Strength!
-  %button.btn.btn-primary= link_to "Sign Up!", new_user_registration_path
+=render 'refills/hero'
