--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,4 @@
 @import "neat";
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "refills/_centered-navigation";
-@import "refills/hero";
-@import "refills/footer-2";
+@import "../../../vendor/assets/stylesheets/**/*";
