--- a/app/views/refills/_footer_2.html.haml
+++ b/app/views/refills/_footer_2.html.haml
@@ -2,6 +2,7 @@
   <div class="wrapper-for-content-outside-of-footer">
   Uncomment this whole section for a sticky footer. The content of the page should be inside of this .wrapper-for-content-outside-of-footer
   </div>
+  TODO #TEMPLATE: NAVIGATION ELEMENTS SHOULD POINT TO THEIR CORRESPONDING PAGES
 %footer.footer-2{:role => "contentinfo"}
   .footer-logo
     %img{:alt => "Logo image", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png"}/
@@ -10,8 +11,6 @@
       %a{:href => "javascript:void(0)"} About
     %li
       %a{:href => "javascript:void(0)"} Contact
-    %li
-      %a{:href => "javascript:void(0)"} Products
   .footer-secondary-links
     %ul
       %li
@@ -27,4 +26,4 @@
           %img{:alt => "Twitter", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png"}/
       %li
         %a{:href => "javascript:void(0)"}
-          %img{:alt => "YouTube", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png"}/
+          %img{:alt => "Github", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/github-logo-circle.png"}/
