--- a/app/views/refills/_centered_navigation.html.haml
+++ b/app/views/refills/_centered_navigation.html.haml
@@ -18,7 +18,7 @@
               %li
                 %a= link_to("Profile", user_path(current_user))
           %li.nav-link
-            %a= link_to("Sign Out", destroy_user_session_path, method: delete)
+            %a= link_to("Sign Out", destroy_user_session_path, method: 'delete')
         - else
           %li.nav-link
             %a= link_to("Home", home_path)
