capybara has major issues; view tests are stupid; slightly better looking index page

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,2 +1,5 @@
-- @all_users.each do |user|
-  %h3= user.email
+%h1 All Users
+= will_paginate(@all_users)
+#ul.list-group
+  = render @all_users
+= will_paginate(@all_users)
