--- a/app/views/refills/_centered_navigation.html.haml
+++ b/app/views/refills/_centered_navigation.html.haml
@@ -17,6 +17,8 @@
                 %a= link_to("Home", home_path)
               %li
                 %a= link_to("Profile", user_path(current_user))
+              %li
+                %a= link_to("Users", all_users_path)
           %li.nav-link
             %a= link_to("Sign Out", destroy_user_session_path, method: 'delete')
         - else
