--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,12 +3,15 @@
     %title PrilepinsStrengthProgram
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = javascript_include_tag :defaults
     = csrf_meta_tags
   %body
     =render 'refills/centered_navigation'
     .container
       %p.notice= notice
       %p.alert= alert
+      - flash.each do |key, value|
+        %p.alert= "#{key}: #{value}"
       = yield
     =render 'refills/footer_2'
   = debug(params) if Rails.env.development?
