--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,13 +1,13 @@
-.row
-  .col-md-2
-    .sidebar.profile
-      %img.gravatar= gravatar_image_tag(@user.email)
-      %h3= @user.email
-      %h3 Current squat max
-      %h3 Current bench max
-      %h3 Current deadlift max
-  .col-md-10
-    .container-fluid
+.container-fluid
+  .row
+    .col-md-3.sidebar
+      .profile
+        %img.gravatar= gravatar_image_tag(@user.email)
+        %h3= @user.email
+        - unless @user.current_max.nil?
+          - @user.current_max.each do |movement, max|
+            %h3= "Current #{movement} max: #{max}"
+    .col-md-8.col-md-offset-1
       %table.table.table-striped
         %tr
           %th Week
@@ -20,3 +20,8 @@
             %td Bench
             %td Deadlift
             %td Squat
+  .row.posts
+    .col-md-10.col-md-offset-1
+      - unless @user.posts.empty?
+        = render @user.posts.all
+        = will_paginate @posts
