--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -13,6 +13,6 @@
   %b Duration:
   = @workout.duration
 
-= link_to 'Edit', edit_workout_path(@workout)
+= link_to 'Edit', edit_user_workout_path(@workout)
 \|
-= link_to 'Back', workouts_path
+= link_to 'Back', user_workouts_path
