--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -4,4 +4,4 @@
     %br
     = time_ago_in_words(post.created_at) + " ago"
   .col-md-1
-    = link_to(edit_user_post_path, "edit")
+    -# = link_to(edit_user_post_path, "edit")
