create and publish posts

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,1 +1,15 @@
-=render 'refills/hero'
+- if user_signed_in?
+  .row.create-post
+    .col-md-6.col-md-offset-3
+      %h1 What's on your mind?
+      =render 'posts/new'
+
+  .row.posts
+    .col-md-10.col-md-offset-1
+      - unless @posts.empty?
+        %ul.list-group
+          = render @posts
+        = will_paginate @posts
+
+- else
+  =render 'refills/hero'
