--- a/app/views/refills/_centered_navigation.html.haml
+++ b/app/views/refills/_centered_navigation.html.haml
@@ -4,8 +4,9 @@
       %ul#js-centered-navigation-menu.centered-navigation-menu.show
         %li.nav-link
           %a{:href => "javascript:void(0)"} About
-        %li.nav-link
-          %a{:href => "javascript:void(0)"} Contact
+        - if user_signed_in?
+          %li.nav-link
+            %a= link_to("Workouts", user_workouts_path(current_user)) 
         %li.nav-link.logo
           %a.logo
             %img{:alt => "Logo image", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3_dark.png"}/
